--- a/style.css/original_page.css
+++ b/style.css/original_page.css
@@ -26,10 +26,31 @@
     border-radius: 5px 0 0 5px;
     color: #61677A;
     padding-left: 5px;
+    border: none;
+}
+.track:focus {
+    outline: none;
 }
 
 .track-btn {
     background-color: #61677A;
     border-radius: 0 5px 5px 0;
+    border: none;
 
+}
+
+.track-btn img {
+    width: 100%;
+    height: 80%;
+}
+
+.track-btn ,.track-btn img {
+    cursor: pointer;
+}
+
+.track-btn:active {
+    background-color: #3e424f;
+}
+.track-btn img:active {
+    background-color: #3e424f;
 }
