--- a/style.css/original_page.css
+++ b/style.css/original_page.css
@@ -1,23 +1,22 @@
 * {
-    margin: 0
+    margin: 0;
+    background-color: #94A684;
 }
 .container {
-    width: 180px;
+    width: 260px;
     height: 50px;
     padding: 5px;
     margin: 0;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #272829;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 3px;
+    background-color: #94A684;
 }
 
 .inputs {
     display: grid;
     grid-template-columns: 80% 20%;
-    width: 100%;
-    height: 60%;
+
 }
 
 .track {
@@ -33,7 +32,6 @@
 }
 
 .track-btn {
-    background-color: #61677A;
     border-radius: 0 5px 5px 0;
     border: none;
 
@@ -49,8 +47,32 @@
 }
 
 .track-btn:active {
-    background-color: #3e424f;
+    background-color: #E4E4D0;
+
 }
 .track-btn img:active {
-    background-color: #3e424f;
+    background-color: #E4E4D0;
 }
+
+.resultado {
+    display: flex;
+}
+
+.resultado table {
+    width: 100%;
+    background-color: #94A684;
+}
+
+.resultado table tbody tr td {
+    background-color: #94A684;
+    font-size: 0.65rem;
+}
+
+.r {
+    display: none;
+}
+
+/* .r {
+    display: table-row;
+} */
+
